# ChatbotFactory

./: .replit  HISOBOT_1-BOSQICH.md  HISOBOT_5b-BOSQICH.md  HISOBOT_5c-BOSQICH.md  HISOBOT_UPLOAD_FIX.md  YANGI_LOYIHA_HISOBOTI.md  babel.cfg  main.py  pyproject.toml  replit.md  run.py
attached_assets/: Pasted-Bu-ajoyib-va-eng-to-g-ri-fikr-Siz-mutlaqo-haqsiz-Ba-zan-AI-yoki-development-muhiti-o-zining-eski--1757062280553_1757062280554.txt  Pasted-Prompt-1-Bosqich-Foydalanuvchi-Autentifikatsiyasi-Quyidagi-matnni-to-liq-nusxalab-Replit-AI-ga--1757066555309_1757066555310.txt  Pasted-Prompt-1-Bosqich-Foydalanuvchi-Autentifikatsiyasini-To-liq-Implementatsiya-Qilish-Quyidagi-matnn-1757063545861_1757063545862.txt  Pasted-Prompt-2-Bosqich-Bot-Yaratish-va-Boshqarish-Quyidagi-matnni-to-liq-nusxalab-Replit-AI-ga-joylas-1757064223597_1757064223598.txt  Pasted-Prompt-4-Bosqich-Obuna-Tizimi-va-Cheklovlar-Quyidagi-matnni-to-liq-nusxalab-Replit-AI-ga-joylas-1757067279291_1757067279292.txt  Pasted-Salom-Biz-Admin-Paneliga-kirish-tizimini-o-zgartirishimiz-kerak-Mavjud-foydalanuvchilarni-adminga--1757082477102_1757082477103.txt  Pasted-Salom-Biz-ChatBot-Factory-loyihasining-5-bosqichini-boshlaymiz-Bilimlar-Bazasi-Knowledge-Base--1757067660995_1757067660996.txt  Pasted-Salom-Biz-ChatBot-Factory-loyihasining-6-bosqichini-boshlaymiz-Admin-Paneli-va-E-lonlar-Tizimi--1757081218689_1757081218690.txt  Pasted-Salom-Biz-Kengaytirilgan-Bilimlar-Bazasining-birinchi-qismini-boshlaymiz-5a-Bosqich-Maxsus-Mahs-1757072300588_1757072300589.txt  (+3 more)
chatbot_factory/: PROJECT_REPORT.md  __init__.py  forms.py  (+1 more)
(+29 files in other folders)
