[project]
name = "chatbot-factory"
version = "0.1.0"
description = "AI ChatBot SaaS Platform"
authors = [{name = "AI Developer"}]
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.3.0",
    "Flask-SQLAlchemy>=3.0.0",
    "Flask-Migrate>=4.0.0",
    "Flask-Login>=0.6.0",
    "Flask-Babel>=4.0.0",
    "Flask-WTF>=1.1.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "werkzeug>=2.3.0",
    "email-validator>=2.3.0",
    "requests>=2.31.0",
    "openpyxl>=3.0.0",
    "python-docx>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
